<?xml version="1.0"?>
<package format="2">
  <name>async_comm</name>
  <version>0.1.0</version>
  <description>A C++ library for asynchronous serial communication</description>

  <maintainer email="danielpkoch@gmail.com">Daniel Koch</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/dpkoch/async_comm</url>
  <url type="bugtracker">https://github.com/dpkoch/async_comm/issues</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>boost</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>catkin</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

